--- a/character-overlay.html
+++ b/character-overlay.html
@@ -49,12 +49,12 @@
 </head>
 <body>
   <div class="overlay">
-    <div class="badge"><img src="character_badges/512px/thanos_badge.png"      alt="Thanos"></div>
-    <div class="badge"><img src="character_badges/512px/moonknight_badge.png"  alt="Moon Knight"></div>
-    <div class="badge"><img src="character_badges/512px/kraven_badge.png"      alt="Kraven"></div>
-    <div class="badge"><img src="character_badges/512px/darthmaul_badge.png"   alt="Darth Maul"></div>
-    <div class="badge"><img src="character_badges/512px/greenranger_badge.png" alt="Green Ranger"></div>
-    <div class="badge"><img src="character_badges/512px/shredder_badge.png"    alt="Shredder"></div>
+    <div class="badge"><img src="character_badges/thanos.png"      alt="Thanos"></div>
+    <div class="badge"><img src="character_badges/moonknight.png"  alt="Moon Knight"></div>
+    <div class="badge"><img src="character_badges/kraven.png"      alt="Kraven"></div>
+    <div class="badge"><img src="character_badges/darth-maul.png"   alt="Darth Maul"></div>
+    <div class="badge"><img src="character_badges/green-ranger.png" alt="Green Ranger"></div>
+    <div class="badge"><img src="character_badges/shredder.png"    alt="Shredder"></div>
   </div>
 </body>
 </html>
